Add reset.css and style.css, link in index.html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html> 
 	<head>
 		<title> Amazerrific </title>
+		<link rel="stylesheet" type="text/css" href="reset.css">
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 
 	<body>
@@ -9,7 +11,7 @@
 			<h1> Amazerrific </h1>
 			<nav> 
 				<a href= "#"> Sign Up! </a> |
-				<a href= "#"> FAQ </a> |
+				<a href= "faq.html"> FAQ </a> |
 				<a href= "#"> Support </a> |
 
 			</nav>
